# fuzzy

./: .gitignore  .pre-commit-config.yaml  DEV.md  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: architecture.md  tech_debt.md  test_coverage_summary.md  testing.md  usage.md
fuzzy_matcher/: __init__.py  main.py
fuzzy_matcher/application/: __init__.py  facades.py  services.py
fuzzy_matcher/domain/: __init__.py  entities.py
fuzzy_matcher/infrastructure/: __init__.py  algorithms.py  preprocessors.py  repositories.py
fuzzy_matcher/protocols/: __init__.py  interfaces.py
scripts/: check-all.sh  cli.py  format.sh  lint.sh  prd.txt  release.sh  test.sh
tests/: conftest.py
tests/e2e/: test_exact_matches.py  test_main_examples.py
tests/integration/: test_application_services.py  test_facades.py
tests/unit/: test_hypothesis.py  test_mocks.py
tests/unit/domain/: test_entities.py
tests/unit/infrastructure/: test_algorithms.py  test_preprocessors.py  test_repositories.py
